--- a/css/styles.css
+++ b/css/styles.css
@@ -404,9 +404,16 @@ img{
     padding: 100px 0;
 }
 
+.footer-container {
+    display:flex;
+    /* justify-content: space-between; */
+    align-items: flex-start;
+}
+
 .footer-wrapper {
     display:flex;
     gap: 120px;
+    align-items: flex-start;
 }
 
 .footer-content {}
@@ -429,7 +436,9 @@ img{
 }
 
 .footer-social-content {
-    margin-left: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
 }
 
 .footer-social-text {
@@ -478,13 +487,15 @@ img{
     width: 264px;
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
     padding: 8px 16px;
-    outline: transparent;
-    font-size: 14px;
+    font-size: 12px;
+    line-height: 2;
+    letter-spacing: 0.04em;
     color: #fff;
+    outline: transparent;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.footer-inout::placeholder {
+.footer-input::placeholder {
     font-size: 12px;
     line-height: 2;
     letter-spacing: 0.04em;
